// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Admin schould return all users [Query] 1`] = `
Object {
  "users": Array [
    Object {
      "email": "john@doe.com",
      "firstName": "John",
      "lastName": "Doe",
    },
    Object {
      "email": "jane@doe.com",
      "firstName": "Jane",
      "lastName": "Doe",
    },
    Object {
      "email": "jake@doe.com",
      "firstName": "Jake",
      "lastName": "Doe",
    },
  ],
}
`;

exports[`User Admin schould return other user [Query] 1`] = `
Object {
  "user": Object {
    "email": "john@doe.com",
    "firstName": "John",
    "lastName": "Doe",
  },
}
`;

exports[`User Admin schould update other user data [Mutation] 1`] = `
Object {
  "updateUser": Object {
    "user": Object {
      "email": "test@test.com",
      "firstName": "Test1",
      "lastName": "Test2",
    },
  },
}
`;

exports[`User Admin schould update own user data [Mutation] 1`] = `
Object {
  "updateUser": Object {
    "user": Object {
      "email": "test@test.com",
      "firstName": "Test1",
      "lastName": "Test2",
    },
  },
}
`;

exports[`User Anonym should create a User [Mutation] 1`] = `
Object {
  "email": "max@mustermann.de",
  "firstName": "Max",
  "lastName": "Mustermann",
}
`;

exports[`User Anonym should login a valid User [Mutation] 1`] = `
Object {
  "email": "jake@doe.com",
  "firstName": "Jake",
  "lastName": "Doe",
}
`;

exports[`User User schould return only own user [Query] 1`] = `
Object {
  "users": Array [
    Object {
      "email": "john@doe.com",
      "firstName": "John",
      "lastName": "Doe",
    },
  ],
}
`;

exports[`User User schould update own user data [Mutation] 1`] = `
Object {
  "updateUser": Object {
    "user": Object {
      "email": "test@test.com",
      "firstName": "Test1",
      "lastName": "Test2",
    },
  },
}
`;
